@@ -22,8 +22,9 @@ function get_pull_description {
 }
 
 function init_test_options {
-    [ $NARAYANA_VERSION ] || NARAYANA_VERSION="5.0.0.M3-SNAPSHOT"
+    [ $NARAYANA_CURRENT_VERSION ] || NARAYANA_CURRENT_VERSION="5.0.3.Final-SNAPSHOT"
     [ $ARQ_PROF ] || ARQ_PROF=arq	# IPv4 arquillian profile
+    [ $IBM_ORB ] || IBM_ORB=0
 
     PULL_DESCRIPTION=$(get_pull_description)
 
@@ -35,7 +36,7 @@ function init_test_options {
         FINDBUGS=findbugs,
         comment_on_pull "Started testing this pull request with MAIN profile: $BUILD_URL"
         export AS_BUILD=1 NARAYANA_BUILD=1 NARAYANA_TESTS=1 BLACKTIE=0 XTS_AS_TESTS=0 XTS_TESTS=0 TXF_TESTS=0 txbridge=0
-        export RTS_AS_TESTS=1 RTS_TESTS=1 JTA_CDI_TESTS=1 QA_TESTS=0 SUN_ORB=0 JAC_ORB=0 JTA_AS_TESTS=0
+        export RTS_AS_TESTS=1 RTS_TESTS=1 JTA_CDI_TESTS=1 QA_TESTS=0 SUN_ORB=0 JAC_ORB=0 JTA_AS_TESTS=1
     elif [[ $PROFILE == "XTS" ]] && [[ ! $PULL_DESCRIPTION =~ "!XTS" ]]; then
         comment_on_pull "Started testing this pull request with XTS profile: $BUILD_URL"
         export AS_BUILD=1 NARAYANA_BUILD=1 NARAYANA_TESTS=0 BLACKTIE=0 XTS_AS_TESTS=1 XTS_TESTS=1 TXF_TESTS=1 txbridge=1
@@ -69,7 +70,7 @@ function init_test_options {
         [ $RTS_AS_TESTS ] || RTS_AS_TESTS=1 # RTS tests
         [ $RTS_TESTS ] || RTS_TESTS=1 # REST-AT Test
         [ $JTA_CDI_TESTS ] || JTA_CDI_TESTS=1 # JTA CDI Tests
-        [ $JTA_AS_TESTS ] || JTA_AS_TESTS=1 # RTS tests
+        [ $JTA_AS_TESTS ] || JTA_AS_TESTS=1 # JTA AS tests
         [ $QA_TESTS ] || QA_TESTS=1 # QA test suite
         [ $SUN_ORB ] || SUN_ORB=1 # Run QA test suite against the Sun orb
         [ $JAC_ORB ] || JAC_ORB=1 # Run QA test suite against JacORB
@@ -141,9 +142,17 @@ function kill_qa_suite_processes
 function build_narayana {
   echo "Building Narayana"
   cd $WORKSPACE
+
   [ $NARAYANA_TESTS = 1 ] && NARAYANA_ARGS= || NARAYANA_ARGS="-DskipTests"
 
-  ./build.sh -P${FINDBUGS}release,community$OBJECT_STORE_PROFILE -Didlj-enabled=true "$@" $NARAYANA_ARGS $IPV6_OPTS clean install
+  if [ $IBM_ORB = 1 ]; then
+    ORBARG="-Dibmorb-enabled -Djacorb-disabled"
+    ${JAVA_HOME}/bin/java -version 2>&1 | grep IBM
+    [ $? = 0 ] || fatal "You must use the IBM jdk to build with ibmorb"
+  else
+    ORBARG="-Didlj-enabled"
+  fi
+  ./build.sh -P${FINDBUGS}release,community$OBJECT_STORE_PROFILE $ORBARG "$@" $NARAYANA_ARGS $IPV6_OPTS clean install
   [ $? = 0 ] || fatal "narayana build failed"
 
   return 0
@@ -192,8 +201,12 @@ function build_as {
   echo "This is the JBoss-AS commit"
   echo $(git rev-parse upstream/master)
 
-  git pull --rebase --ff-only upstream master
-  [ $? = 0 ] || fatal "git rebase failed"
+  #git pull --rebase --ff-only upstream master
+  #[ $? = 0 ] || fatal "git rebase failed"
+
+  WILDFLY_VERSION_FROM_JBOSS_AS=`awk "/wildfly-parent/ {getline;print;}" pom.xml | cut -d \< -f 2|cut -d \> -f 2`
+  echo "AS version is ${WILDFLY_VERSION_FROM_JBOSS_AS}"
+  [ ${WILDFLY_MASTER_VERSION} == ${WILDFLY_VERSION_FROM_JBOSS_AS} ] || fatal "Need to upgrade the jboss-as.version in the narayana pom.xml to ${WILDFLY_VRESION_FROM_JBOSS_AS}"
 
   export MAVEN_OPTS="$MAVEN_OPTS -XX:MaxPermSize=512m"
   JAVA_OPTS="$JAVA_OPTS -Xms1303m -Xmx1303m -XX:MaxPermSize=512m" ./build.sh clean install -DskipTests -Dts.smoke=false $IPV6_OPTS -Drelease=true
@@ -234,7 +247,7 @@ function rts_as_tests {
 function jta_as_tests {
   echo "#-1. JTA AS Integration Test"
   cp ArjunaJTA/jta/src/test/resources/standalone-cmr.xml ${JBOSS_HOME}/standalone/configuration/
-  ./build.sh -f ./ArjunaJTA/jta/pom.xml -Parq "$@" test
+  MAVEN_OPTS="-XX:MaxPermSize=512m -Xms1303m -Xmx1303m" ./build.sh -f ./ArjunaJTA/jta/pom.xml -Parq "$@" test
   [ $? = 0 ] || fatal "JTA AS Integration Test failed"
   cd ${WORKSPACE}
 }
@@ -276,7 +289,7 @@ function blacktie {
   rm -rf ${WORKSPACE}/blacktie/wildfly-${WILDFLY_MASTER_VERSION}
   cp -rp ${WORKSPACE}/jboss-as/build/target/wildfly-${WILDFLY_MASTER_VERSION} -d $PWD/blacktie
   [ $? = 0 ] || fatal "Could not unzip wildfly"
-  unzip ${WORKSPACE}/blacktie/wildfly-blacktie/build/target/wildfly-blacktie-build-5.0.2.Final-SNAPSHOT-bin.zip -d $PWD/blacktie/wildfly-${WILDFLY_MASTER_VERSION}
+  unzip ${WORKSPACE}/blacktie/wildfly-blacktie/build/target/wildfly-blacktie-build-5.0.3.Final-SNAPSHOT-bin.zip -d $PWD/blacktie/wildfly-${WILDFLY_MASTER_VERSION}
   [ $? = 0 ] || fatal "Could not unzip blacktie into widfly"
   # INITIALIZE JBOSS
   ant -f blacktie/scripts/hudson/initializeJBoss.xml -DJBOSS_HOME=$WORKSPACE/blacktie/wildfly-${WILDFLY_MASTER_VERSION} initializeJBoss
@@ -403,6 +416,22 @@ cat << 'EOF' > $WORKSPACE/qa/dist/${NARAYANA_VERSION}/etc/log4j.xml
 EOF
 }
 
+function add_qa_xargs {
+  NXT=$(grep "NEXT_COMMAND_LINE_ARG=" TaskImpl.properties)
+  [ $? = 0 ] || return 1
+
+  let i=$(echo $NXT | sed 's/^.*[^0-9]\([0-9]*\).*$/\1/')
+
+  XARGS=
+  IFS=' ' read -ra ADDR <<< "$1"
+  for j in "${ADDR[@]}"; do
+    XARGS="${XARGS}\nCOMMAND_LINE_$i=$j"
+    let i=i+1
+  done
+
+  sed -i "s/NEXT_COMMAND_LINE_ARG=.*$/${XARGS}/" TaskImpl.properties
+}
+
 function qa_tests_once {
   echo "QA Test Suite $@"
   cd $WORKSPACE/qa
@@ -415,21 +444,29 @@ function qa_tests_once {
     [ $i = "-PcodeCoverage" ] && codeCoverage=true
   done
 
-  # check to see if we were called with orb=idlj as one of the arguments
+  git checkout TaskImpl.properties
+
+  # check to see which orb we are running against:
   if [ x$orb = x"idlj" ]; then
-    IDLJ=1
-    testoutputzip="testoutput-idlj.zip"
+    orbtype=idlj
+  elif [ x$orb = x"ibmorb" ]; then
+    orbtype=ibmorb
+	sed -i TaskImpl.properties -e "s#^  dist#  ${JAVA_HOME}\${file.separator}jre\${file.separator}lib\${file.separator}ibmorb.jar\\\\\\n  \${path.separator}${JAVA_HOME}\${file.separator}jre\${file.separator}lib\${file.separator}ibmorb.jar\\\\\\n  \${path.separator}dist#"
   else
-    IDLJ=0
-    testoutputzip="testoutput-jacorb.zip"
+    orbtype=jacorb
   fi
 
-  git checkout TaskImpl.properties
+  testoutputzip="testoutput-${orbtype}.zip"
+
   sed -i TaskImpl.properties -e "s#^COMMAND_LINE_0=.*#COMMAND_LINE_0=${JAVA_HOME}/bin/java#"
   [ $? = 0 ] || fatal "sed TaskImpl.properties failed"
 
+  if [[ x"$EXTRA_QA_SYSTEM_PROPERTIES" != "x" ]]; then
+    add_qa_xargs "$EXTRA_QA_SYSTEM_PROPERTIES"
+  fi
+
   # delete lines containing jacorb
-  [ $IDLJ = 1 ] && sed -i TaskImpl.properties -e  '/^.*separator}jacorb/ d'
+  [ $orbtype != "jacorb" ] && sed -i TaskImpl.properties -e  '/^.*separator}jacorb/ d'
 
   # if the env variable MFACTOR is set then set the bean property CoreEnvironmentBean.timeoutFactor
   if [[ "$MFACTOR" =~ ^[0-9]+$ ]] ; then
@@ -440,10 +477,16 @@ function qa_tests_once {
     sed -i TaskImpl.properties -e "s/COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=[0-9]*/COMMAND_LINE_13=-DCoordinatorEnvironmentBean.defaultTimeout=${txtimeout}/"
   fi
   # if IPV6_OPTS is not set get the jdbc drivers (we do not run the jdbc tests in IPv6 mode)
-  [ -z "${IPV6_OPTS+x}" ] && ant -DisIdlj=$IDLJ "$QA_BUILD_ARGS" get.drivers dist ||
-    ant -DisIdlj=$IDLJ "$QA_BUILD_ARGS" dist
+  [ -z "${IPV6_OPTS+x}" ] && ant -Dorbtype=$orbtype "$QA_BUILD_ARGS" get.drivers dist ||
+    ant -Dorbtype=$orbtype "$QA_BUILD_ARGS" dist
 
   [ $? = 0 ] || fatal "qa build failed"
+
+  if [ $orbtype = "jacorb" ]; then
+    sed -i dist/narayana-full-${NARAYANA_CURRENT_VERSION}/jacorb/etc/jacorb.properties -e "s#^jacorb.log.default.verbosity=.*#jacorb.log.default.verbosity=2#"
+    sed -i dist/narayana-full-${NARAYANA_CURRENT_VERSION}/jacorb/etc/jacorb.properties -e "s#^jacorb.poa.thread_pool_max=.*#jacorb.poa.thread_pool_max=100#"
+    sed -i dist/narayana-full-${NARAYANA_CURRENT_VERSION}/jacorb/etc/jacorb.properties -e "s#^jacorb.poa.thread_pool_min=.*#jacorb.poa.thread_pool_min=40#"
+  fi
 
   if [[ $# == 0 || $# > 0 && "$1" != "-DskipTests" ]]; then
     # determine which QA test target to call
@@ -452,8 +495,8 @@ function qa_tests_once {
     # if IPV6_OPTS is set then do not do the jdbc tests (ie run target junit-testsuite)
     [ -z "${IPV6_OPTS+x}" ] || target="junit"
 
-    # IDLJ = 1 overrides the previous setting 
-    [ $IDLJ = 1 ] && target="ci-jts-tests" # if called with orb=idlj then only run the jtsremote tests
+    # if called with the sun or ibm orbs then only run the jtsremote tests
+    [ $orbtype != "jacorb" ] && target="ci-jts-tests"
 
     # QA_TARGET overrides the previous settings
     [ x$QA_TARGET = x ] || target=$QA_TARGET # the caller can force the build to run a specific target
@@ -502,19 +545,26 @@ function qa_tests_once {
 function qa_tests {
   ok1=0;
   ok2=0;
-  if [ $SUN_ORB = 1 ]; then
-    qa_tests_once "orb=idlj" "$@" # run qa against the Sun orb
-    ok2=$?
-  fi
-  if [ $JAC_ORB = 1 ]; then
-    qa_tests_once "$@"    # run qa against the default orb
-    ok1=$?
+  ok3=0;
+  if [ $IBM_ORB = 1 ]; then
+    qa_tests_once "orb=ibmorb" "$@" # run qa against the Sun orb
+    ok3=$?
+  else
+    if [ $SUN_ORB = 1 ]; then
+      qa_tests_once "orb=idlj" "$@" # run qa against the Sun orb
+      ok2=$?
+    fi
+    if [ $JAC_ORB = 1 ]; then
+      qa_tests_once "orb=jacorb" "$@"    # run qa against the default orb
+      ok1=$?
+    fi
   fi
 
   [ $ok1 = 0 ] || echo some jacorb QA tests failed
   [ $ok2 = 0 ] || echo some Sun ORB QA tests failed
+  [ $ok3 = 0 ] || echo some IBM ORB QA tests failed
 
-  [ $ok1 = 0 -a $ok2 = 0 ] || fatal "some qa tests failed"
+  [ $ok1 = 0 -a $ok2 = 0 -a $ok3 = 0 ] || fatal "some qa tests failed"
 }
 
 
@@ -534,7 +584,10 @@ init_test_options
 # export WSTX_MODULES="WSAS,WSCF,WSTX,WS-C,WS-T,xtstest,crash-recovery-tests"
 
 [ -z "${WORKSPACE}" ] && fatal "UNSET WORKSPACE"
-[ -z "${WILDFLY_MASTER_VERSION}" ] && fatal "UNSET WILDFLY_MASTER_VERSION"
+#[ -z "${WILDFLY_MASTER_VERSION}" ] && fatal "UNSET WILDFLY_MASTER_VERSION"
+# INFER WILDFLY_MASTER_VERSION from pom.xml
+WILDFLY_MASTER_VERSION=`grep 'jboss-as.version' pom.xml | cut -d \< -f 2|cut -d \> -f 2`
+echo "SET WILDFLY_MASTER_VERSION=${WILDFLY_MASTER_VERSION}"
 
 # FOR DEBUGGING SUBSEQUENT ISSUES
 free -m
